# DelaunayVisualizer

./: CMakeLists.txt  GpuStats.h  LICENSE  README.txt  delaunay_triangulation.h  main.cpp  omp_quicksort.cpp  omp_quicksort.h  plane_sampler.cpp  plane_sampler.h  quick_hull.cpp  quick_hull.h  typedef.cpp  typedef.h  visualizer.cpp  visualizer.h
shaders/: shader_base.vert  vtx.glsl
triangle/: makefile  triangle.h  tricall
